// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render App snapshot 1`] = `
<div
  className="container"
>
  <div
    className="row"
  >
    <div
      className="col-4 sidenav"
    >
      <div
        className="row mt-4"
      >
        <div
          className="title"
        >
          <h2
            data-testid="title"
          >
            Cocktails
          </h2>
        </div>
      </div>
      <div
        className="row"
      >
        <div
          className="segment"
        >
          <div
            className="form-group"
          >
            <label
              htmlFor="type-selector"
            >
              Enter type of search
            </label>
            <select
              className="form-select mb-3"
              id="type-selector"
              onChange={[Function]}
              title="type-selector"
            >
              <option
                value="search"
              >
                search
              </option>
              <option
                value="filter"
              >
                filter
              </option>
            </select>
          </div>
          <div
            className="form-group"
          >
            <label
              htmlFor="segment-key"
            >
              Enter category of search
            </label>
            <select
              className="form-select mb-3"
              id="segment-key"
              onChange={[Function]}
            >
              <option
                value="firstLetter"
              >
                First Letter
              </option>
              <option
                value="cocktailName"
              >
                Cocktail Name
              </option>
            </select>
          </div>
          <div
            className="row"
          >
            <span>
              Enter value
            </span>
            <br />
            <div
              className="form-group"
            >
              <input
                className="form-control"
                id="search"
                onChange={[Function]}
                placeholder="(letter or cocktail name)"
                type="search"
              />
              <small
                className="form-text text-muted"
                id="emailHelp"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        className="row mt-3"
      />
      <div
        className="row mt-3"
      />
      <div
        className="row"
      >
        <div
          className="col-12"
        />
      </div>
    </div>
    <div
      className="col-8 listarea"
    >
      <div
        className="row mt-3 mb-3"
      >
        <div
          className="col-12"
        >
          <div
            className="container"
          >
            <div
              className=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`when "filter" type clicked should trigger render of value selector 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="container"
      >
        <div
          class="row"
        >
          <div
            class="col-4 sidenav"
          >
            <div
              class="row mt-4"
            >
              <div
                class="title"
              >
                <h2
                  data-testid="title"
                >
                  Cocktails
                </h2>
              </div>
            </div>
            <div
              class="row"
            >
              <div
                class="segment"
              >
                <div
                  class="form-group"
                >
                  <label
                    for="type-selector"
                  >
                    Enter type of search
                  </label>
                  <select
                    class="form-select mb-3"
                    id="type-selector"
                    title="type-selector"
                  >
                    <option
                      value="search"
                    >
                      search
                    </option>
                    <option
                      value="filter"
                    >
                      filter
                    </option>
                  </select>
                </div>
                <div
                  class="form-group"
                >
                  <label
                    for="segment-key"
                  >
                    Enter category of search
                  </label>
                  <select
                    class="form-select mb-3"
                    id="segment-key"
                  >
                    <option
                      value="alcoholic"
                    >
                      Alcoholic / Nonalcoholic
                    </option>
                    <option
                      value="category"
                    >
                      Category
                    </option>
                    <option
                      value="ingredient"
                    >
                      Ingredient
                    </option>
                    <option
                      value="glass"
                    >
                      Glass
                    </option>
                  </select>
                </div>
                <div
                  class="form-group"
                >
                  <label
                    for="segment-value"
                  >
                    SegmentValueSelector
                  </label>
                  <select
                    class="form-select mb-3"
                    id="segment-value"
                  >
                    <option
                      value="alcoholic"
                    >
                      Alcoholic
                    </option>
                    <option
                      value="non_alcoholic"
                    >
                      Non Alcoholic
                    </option>
                    <option
                      value="optional_alcohol"
                    >
                      Optional Alcohol
                    </option>
                  </select>
                </div>
              </div>
            </div>
            <div
              class="row mt-3"
            />
            <div
              class="row mt-3"
            />
            <div
              class="row"
            >
              <div
                class="col-12"
              />
            </div>
          </div>
          <div
            class="col-8 listarea"
          >
            <div
              class="row mt-3 mb-3"
            >
              <div
                class="col-12"
              >
                <div
                  class="container"
                >
                  <div
                    class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="container"
    >
      <div
        class="row"
      >
        <div
          class="col-4 sidenav"
        >
          <div
            class="row mt-4"
          >
            <div
              class="title"
            >
              <h2
                data-testid="title"
              >
                Cocktails
              </h2>
            </div>
          </div>
          <div
            class="row"
          >
            <div
              class="segment"
            >
              <div
                class="form-group"
              >
                <label
                  for="type-selector"
                >
                  Enter type of search
                </label>
                <select
                  class="form-select mb-3"
                  id="type-selector"
                  title="type-selector"
                >
                  <option
                    value="search"
                  >
                    search
                  </option>
                  <option
                    value="filter"
                  >
                    filter
                  </option>
                </select>
              </div>
              <div
                class="form-group"
              >
                <label
                  for="segment-key"
                >
                  Enter category of search
                </label>
                <select
                  class="form-select mb-3"
                  id="segment-key"
                >
                  <option
                    value="alcoholic"
                  >
                    Alcoholic / Nonalcoholic
                  </option>
                  <option
                    value="category"
                  >
                    Category
                  </option>
                  <option
                    value="ingredient"
                  >
                    Ingredient
                  </option>
                  <option
                    value="glass"
                  >
                    Glass
                  </option>
                </select>
              </div>
              <div
                class="form-group"
              >
                <label
                  for="segment-value"
                >
                  SegmentValueSelector
                </label>
                <select
                  class="form-select mb-3"
                  id="segment-value"
                >
                  <option
                    value="alcoholic"
                  >
                    Alcoholic
                  </option>
                  <option
                    value="non_alcoholic"
                  >
                    Non Alcoholic
                  </option>
                  <option
                    value="optional_alcohol"
                  >
                    Optional Alcohol
                  </option>
                </select>
              </div>
            </div>
          </div>
          <div
            class="row mt-3"
          />
          <div
            class="row mt-3"
          />
          <div
            class="row"
          >
            <div
              class="col-12"
            />
          </div>
        </div>
        <div
          class="col-8 listarea"
        >
          <div
            class="row mt-3 mb-3"
          >
            <div
              class="col-12"
            >
              <div
                class="container"
              >
                <div
                  class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`when aaa bbb 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="container"
      >
        <div
          class="row"
        >
          <div
            class="col-4 sidenav"
          >
            <div
              class="row mt-4"
            >
              <div
                class="title"
              >
                <h2
                  data-testid="title"
                >
                  Cocktails
                </h2>
              </div>
            </div>
            <div
              class="row"
            >
              <div
                class="segment"
              >
                <div
                  class="form-group"
                >
                  <label
                    for="type-selector"
                  >
                    Enter type of search
                  </label>
                  <select
                    class="form-select mb-3"
                    id="type-selector"
                    title="type-selector"
                  >
                    <option
                      value="search"
                    >
                      search
                    </option>
                    <option
                      value="filter"
                    >
                      filter
                    </option>
                  </select>
                </div>
                <div
                  class="form-group"
                >
                  <label
                    for="segment-key"
                  >
                    Enter category of search
                  </label>
                  <select
                    class="form-select mb-3"
                    id="segment-key"
                  >
                    <option
                      value="firstLetter"
                    >
                      First Letter
                    </option>
                    <option
                      value="cocktailName"
                    >
                      Cocktail Name
                    </option>
                  </select>
                </div>
                <div
                  class="row"
                >
                  <span>
                    Enter value
                  </span>
                  <br />
                  <div
                    class="form-group"
                  >
                    <input
                      class="form-control"
                      id="search"
                      placeholder="(letter or cocktail name)"
                      type="search"
                    />
                    <small
                      class="form-text text-muted"
                      id="emailHelp"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="row mt-3"
            />
            <div
              class="row mt-3"
            />
            <div
              class="row"
            >
              <div
                class="col-12"
              />
            </div>
          </div>
          <div
            class="col-8 listarea"
          >
            <div
              class="row mt-3 mb-3"
            >
              <div
                class="col-12"
              >
                <div
                  class="container"
                >
                  <div
                    class=""
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="container"
    >
      <div
        class="row"
      >
        <div
          class="col-4 sidenav"
        >
          <div
            class="row mt-4"
          >
            <div
              class="title"
            >
              <h2
                data-testid="title"
              >
                Cocktails
              </h2>
            </div>
          </div>
          <div
            class="row"
          >
            <div
              class="segment"
            >
              <div
                class="form-group"
              >
                <label
                  for="type-selector"
                >
                  Enter type of search
                </label>
                <select
                  class="form-select mb-3"
                  id="type-selector"
                  title="type-selector"
                >
                  <option
                    value="search"
                  >
                    search
                  </option>
                  <option
                    value="filter"
                  >
                    filter
                  </option>
                </select>
              </div>
              <div
                class="form-group"
              >
                <label
                  for="segment-key"
                >
                  Enter category of search
                </label>
                <select
                  class="form-select mb-3"
                  id="segment-key"
                >
                  <option
                    value="firstLetter"
                  >
                    First Letter
                  </option>
                  <option
                    value="cocktailName"
                  >
                    Cocktail Name
                  </option>
                </select>
              </div>
              <div
                class="row"
              >
                <span>
                  Enter value
                </span>
                <br />
                <div
                  class="form-group"
                >
                  <input
                    class="form-control"
                    id="search"
                    placeholder="(letter or cocktail name)"
                    type="search"
                  />
                  <small
                    class="form-text text-muted"
                    id="emailHelp"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="row mt-3"
          />
          <div
            class="row mt-3"
          />
          <div
            class="row"
          >
            <div
              class="col-12"
            />
          </div>
        </div>
        <div
          class="col-8 listarea"
        >
          <div
            class="row mt-3 mb-3"
          >
            <div
              class="col-12"
            >
              <div
                class="container"
              >
                <div
                  class=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
